--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-three/drei": "^10.6.1",
     "@react-three/fiber": "^9.3.0",
+    "axios": "^1.13.2",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.553.0",
     "next": "15.4.6",
